commit #24 add SQL from dbeaver layout and tests 2 add pom.xml dependencies for sql